<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
    android:key="pref_key_server_settings"
    android:title="@string/pref_server">

    <PreferenceScreen
        android:key="button_sites_category_key"
        android:title="@string/sites"
        android:persistent="false">
        <ListPreference
            android:dialogTitle="@string/chose_site"
            android:key="saved_sites_key"
            android:title="@string/saved_sites" />
        <Preference
            android:key="add_site"
            android:summary="@string/add_site_summ"
            android:title="@string/add_site"/>
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_ssh_keys"
        android:title="@string/pref_ssh_key">

        <PreferenceScreen
            android:key="button_sites_category_key"
            android:title="@string/sites"
            android:persistent="false">
            <ListPreference
                android:key="pref_keys"
                android:title="@string/pref_ssh_key" />
            <Preference
                android:key="pref_import_ssh"
                android:summary="@string/pref_ssh_import_summ"
                android:title="@string/pref_ssh_import"/>
            <Preference
                android:key="pref_generate_ssh"
                android:summary="@string/pref_ssh_generate"
                android:title="@string/pref_ssh_generate_summ"
             />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="Miscellaneous">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_tag"
            android:summary="@string/pref_tag_summ"
            android:title="@string/pref_tag" />

        <EditTextPreference
            android:defaultValue="[img]%url[/img]"
            android:dependency="pref_tag"
            android:inputType="textUri"
            android:key="pref_tag_txt"
            android:summary="@string/pref_tag_txt_summ"
            android:title="@string/pref_tag_txt" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/clickAlias"
            android:entryValues="@array/clickValues"
            android:key="pref_list"
            android:summary="@string/pref_default_list_summ"
            android:title="@string/pref_default_list" />

        <Preference
            android:key="clear_hist"
            android:summary="@string/clear_hist_summ"
            android:title="@string/clear_hist"></Preference>
    </PreferenceCategory>



</PreferenceScreen>