<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
 <android.support.v7.widget.Toolbar
        android:id="@+id/my_awesome_toolbar"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:minHeight="?attr/actionBarSize"
    android:background="?attr/colorPrimary" />
    <LinearLayout
        android:layout_below="@id/my_awesome_toolbar"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_host"
        android:id="@+id/textView"
        android:layout_gravity="end" />

    <EditText
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_host"
        android:layout_gravity="end"
        android:hint="@string/add_host" />

    <TextView
        android:layout_marginEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_port"
        android:id="@+id/textView2"
        android:layout_gravity="end" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"

        android:layout_margin="5dp"
        android:id="@+id/et_port"
        android:layout_gravity="end"
        android:hint="@string/add_port" />

    <TextView
        android:layout_marginEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_remote_path"
        android:id="@+id/textView3"
        android:layout_gravity="end" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/et_path"
        android:layout_gravity="end"
        android:hint="@string/add_remote_path" />

    <TextView
        android:layout_marginEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_url"
        android:id="@+id/textView4"
        android:layout_gravity="end" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:id="@+id/et_url"
        android:layout_margin="5dp"
        android:layout_gravity="end"
        android:hint="@string/add_url" />

    <TextView
        android:layout_marginEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_username"
        android:id="@+id/textView5"
        android:layout_gravity="end" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_margin="5dp"
        android:id="@+id/et_username"
        android:layout_gravity="end"
        android:hint="@string/add_username" />

    <TextView
        android:layout_marginEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_password"
        android:id="@+id/textView6"
        android:layout_gravity="end" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_password"
        android:layout_margin="5dp"
        android:layout_gravity="end"
        android:hint="@string/add_password" />

    <Switch
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_self_signed"
        android:id="@+id/switch1"
        android:layout_marginBottom="5dp"
        android:layout_gravity="end"
        android:checked="false" />

        <Switch
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_keys"
            android:id="@+id/switch2"
            android:layout_marginBottom="5dp"
            android:layout_gravity="end"
            android:checked="false" />

</LinearLayout>
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:weightSum="2"
        android:gravity="bottom">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_cancel"
            android:id="@+id/btn_cancel"
            android:layout_gravity="end" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_save"
            android:id="@+id/btn_save"
            android:layout_gravity="end" />


        </LinearLayout>


</RelativeLayout>